// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`create: supports simple rules 1`] = `
{
  "className": [
    "simpleRules",
    "cls_25qmty8",
    "cls_19dymlw",
    "cls_2uxvkjr",
  ],
  "stylesheet": [
    ".cls_25qmty8{font-size:16px;}",
    ".cls_19dymlw{line-height:1.5;}",
    ".cls_2uxvkjr{color:rgb(60,60,60);}",
  ],
}
`;

exports[`create: supports custom props 1`] = `
{
  "className": [
    "customProps",
    "cls_u51u3j",
    "cls_2eax236",
  ],
  "stylesheet": [
    ".cls_u51u3j{--customColor:red;}",
    ".cls_2eax236{--custom-color:red;}",
  ],
}
`;

exports[`create: supports pseudo-classes 1`] = `
{
  "className": [
    "pseudoClass",
    "cls_2x0itcu",
    "cls_38celjy",
    "cls_hlr7gc",
  ],
  "stylesheet": [
    ".cls_2x0itcu{background-color:lightblue;}",
    ".cls_38celjy{&:hover{background-color:blue;}}",
    ".cls_hlr7gc{&:active{background-color:darkblue;}}",
  ],
}
`;

exports[`create: supports pseudo-elements 1`] = `
{
  "className": [
    "pseudoElement",
    "cls_2xqoorw",
  ],
  "stylesheet": [
    ".cls_2xqoorw{&::placeholder{color:#999;}}",
  ],
}
`;

exports[`create: supports media query 1`] = `
{
  "className": [
    "mediaQuery",
    "cls_1r3xy2y",
    "cls_1w5xhcu",
    "cls_35z1h0o",
  ],
  "stylesheet": [
    ".cls_1r3xy2y{width:800;}",
    ".cls_1w5xhcu{@media (max-width: 800px){width:100%;}}",
    ".cls_35z1h0o{@media (min-width: 1540px){width:1366;}}",
  ],
}
`;

exports[`create: supports complex rules 1`] = `
{
  "className": [
    "button",
    "cls_2ix8wso",
    "cls_yf57wf",
    "cls_2164cwl",
  ],
  "stylesheet": [
    ".cls_2ix8wso{color:var(--blue-link);}",
    ".cls_yf57wf{&:hover{@media (hover: hover){color:scale(1.1);}}}",
    ".cls_2164cwl{&:active{color:scale(0.9);}}",
  ],
}
`;

exports[`create: works with JSX via spread operator 1`] = `
{
  "$": "🦄",
  "html": [
    "<button ",
    "class="button cls_2ix8wso cls_yf57wf cls_2164cwl" ",
    ">",
    "</button>",
  ],
  "registry": [],
  "stylesheets": [
    ".cls_2ix8wso{color:var(--blue-link);}",
    ".cls_yf57wf{&:hover{@media (hover: hover){color:scale(1.1);}}}",
    ".cls_2164cwl{&:active{color:scale(0.9);}}",
  ],
}
`;

exports[`createHost: supports simple rules 1`] = `
{
  "stylesheet": [
    ":host{font-size:16px;}",
    ":host{line-height:1.5;}",
    ":host{color:rgb(60,60,60);}",
  ],
}
`;

exports[`createHost: supports custom props 1`] = `
{
  "stylesheet": [
    ":host{--customColor:red;}",
    ":host{--custom-color:red;}",
  ],
}
`;

exports[`createHost: supports pseudo-classes 1`] = `
{
  "stylesheet": [
    ":host{background-color:lightblue;}",
    ":host{:hover{background-color:blue;}}",
    ":host{:active{background-color:darkblue;}}",
  ],
}
`;

exports[`createHost: supports pseudo-elements 1`] = `
{
  "stylesheet": [
    ":host{::placeholder{color:#999;}}",
  ],
}
`;

exports[`createHost: supports media query 1`] = `
{
  "stylesheet": [
    ":host{width:800;}",
    ":host{@media (max-width: 800px){width:100%;}}",
    ":host{@media (min-width: 1540px){width:1366;}}",
  ],
}
`;

exports[`createHost: supports complex rules 1`] = `
{
  "stylesheet": [
    ":host{color:var(--blue-link);}",
    ":host(:hover){@media (hover: hover){color:scale(1.1);}}",
    ":host(:active){color:scale(0.9);}",
  ],
}
`;

exports[`createHost: works with JSX via spread operator 1`] = `
{
  "$": "🦄",
  "html": [
    "<button ",
    ">",
    "</button>",
  ],
  "registry": [],
  "stylesheets": [
    ":host($default){color:var(--blue-link);}",
    ":host(:hover){@media (hover: hover){color:scale(1.1);}}",
    ":host(:active){color:scale(0.9);}",
  ],
}
`;

exports[`createParts: supports simple rules 1`] = `
{
  "stylesheet": [
    ":host{[part="button"]{font-size:var(--fontSize);}}",
    ":host{[part="button"]{line-height:var(--lineHeight);}}",
    ":host{[part="button"]{color:var(--color);}}",
  ],
}
`;

exports[`createParts: supports custom props 1`] = `
{
  "stylesheet": [
    ":host{[part="button"]{--customColor:var(--red);}}",
    ":host{[part="button"]{--custom-color:var(--red);}}",
  ],
}
`;

exports[`createParts: supports pseudo-classes 1`] = `
{
  "stylesheet": [
    ":host{[part="button"]{background-color:var(--lightblue);}}",
    ":host(:hover){[part="button"]{background-color:var(--blue);}}",
    ":host(:active){[part="button"]{background-color:var(--darkblue);}}",
  ],
}
`;

exports[`createParts: works with JSX via spread operator 1`] = `
{
  "$": "🦄",
  "html": [
    "<button ",
    ">",
    "</button>",
  ],
  "registry": [],
  "stylesheets": [
    ":host{[part="button"]{background-color:var(--lightblue);}}",
    ":host(:hover){[part="button"]{background-color:var(--blue);}}",
    ":host(:active){[part="button"]{background-color:var(--darkblue);}}",
  ],
}
`;

exports[`createParts: supports pseudo-elements 1`] = `
{
  "stylesheet": [
    ":host{[part="button"]{&::placeholder{color:var(--placeholder);}}}",
  ],
}
`;

exports[`createParts: supports media query 1`] = `
{
  "stylesheet": [
    ":host{[part="content"]{width:var(--default-width);}}",
    ":host{[part="content"]{@media (max-width: 800px){width:var(--max-800);}}}",
    ":host{[part="content"]{@media (min-width: 1540px){width:var(--max-1540);}}}",
  ],
}
`;

exports[`createParts: supports complex rules 1`] = `
{
  "stylesheet": [
    ":host{[part="button"]{color:var(--blue-link);}}",
    ":host(:hover){[part="button"]{@media (hover: hover){color:var(--hover);}}}",
    ":host(:active){[part="button"]{color:var(--active);}}",
  ],
}
`;

exports[`createParts: supports multiple parts 1`] = `
{
  "stylesheet": [
    ":host{[part="button"]{font-size:var(--button-fontSize);}}",
    ":host{[part="button"]{padding:var(--button-padding);}}",
    ":host{[part="label"]{font-size:var(--label-fontSize);}}",
    ":host{[part="label"]{color:var(--label-color);}}",
    ":host{[part="icon"]{width:var(--icon-width);}}",
    ":host{[part="icon"]{height:var(--icon-height);}}",
  ],
}
`;

exports[`keyframes 1`] = `
{
  "stylesheet": [
    "@keyframes pulse_10z9dla{0%{transform:scale(1);}50%{transform:scale(1.1);}100%{transform:scale(1);}}",
  ],
}
`;

exports[`join 1`] = `
{
  "className": [
    "button",
    "cls_a92k2iz",
    "cls_2bgwf8r",
    "cls_1f3us5c",
    "cls_qquuq2",
    "cls_3tddgv",
    "cls_2btfwn5",
    "cls_7h6qxd",
    "small",
    "cls_25tgi78",
    "cls_3z2f3y7",
  ],
  "stylesheet": [
    ".cls_a92k2iz{font-family:Nunito Sans, Helvetica Neue, Helvetica, Arial, sans-serif;}",
    ".cls_2bgwf8r{font-weight:700;}",
    ".cls_1f3us5c{border:0;}",
    ".cls_qquuq2{border-radius:3em;}",
    ".cls_3tddgv{cursor:pointer;}",
    ".cls_2btfwn5{display:inline-block;}",
    ".cls_7h6qxd{line-height:1;}",
    ".cls_25tgi78{font-size:12px;}",
    ".cls_3z2f3y7{padding:10px 16px;}",
    ":host{color:red;}",
  ],
}
`;
